Bug 94847 - Trailing spaces in CSP source lists should not generate console warnings.
Summary: Trailing spaces in CSP source lists should not generate console warnings.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mike West
URL:
Keywords:
Depends on:
Blocks: 93197
  Show dependency treegraph
 
Reported: 2012-08-23 14:10 PDT by Mike West
Modified: 2012-08-23 15:48 PDT (History)
2 users (show)

See Also:


Attachments
Patch (4.23 KB, patch)
2012-08-23 14:16 PDT, Mike West
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mike West 2012-08-23 14:10:47 PDT
See http://crbug.com/144252 for the original report.

---

The source list for Content Security Policy directive 'script-src' contains an invalid source: ''. It will be ignored.

For this manifest line that used to work:

"content_security_policy": "script-src 'self' chrome-extension://fkhgelnmojgnpahkeemhnbjndeeocehc chrome-extension-resource: ; object-src 'self' "
Comment 1 Mike West 2012-08-23 14:16:06 PDT
Created attachment 160239 [details]
Patch
Comment 2 Mike West 2012-08-23 14:17:59 PDT
Comment on attachment 160239 [details]
Patch

Hi Adam! I'm pretty sure this fixes the issue raised; if you agree, would you mind CQing it?

Thanks!
Comment 3 WebKit Review Bot 2012-08-23 15:48:03 PDT
Comment on attachment 160239 [details]
Patch

Clearing flags on attachment: 160239

Committed r126488: <http://trac.webkit.org/changeset/126488>
Comment 4 WebKit Review Bot 2012-08-23 15:48:06 PDT
All reviewed patches have been landed.  Closing bug.